# giphon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
giphon/: __init__.py  __main__.py  git.py  gitlab.py  siphon.py
src/giphon/: __about__.py  __init__.py  __main__.py  envvars.py  git.py  gitlab.py  siphon.py
tests/: test_envvars.py  test_git.py  test_gitlab.py  test_siphon.py  utils.py
