

# Hatch configuration
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Gabriel Creti", email = "gabrielcreti@gmail.com"},
]
classifiers = [
  # see https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.7",
  "python-gitlab>=3,<4",
  "GitPython>=3,<4",
  "rich>=12,<13",
]
description = "Copy locally a Gitlab group or instance"
dynamic = ["version"]
keywords = [
  "gitlab",
  "clone",
  "copy",
]
license-files = {paths = ["LICENSE"]}
name = "giphon"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Bug Reports" = "https://github.com/kabooboo/giphon/issues"
Documentation = "https://github.com/kabooboo/giphon"
Homepage = "https://github.com/kabooboo/giphon"
"Source Code" = "https://github.com/kabooboo/giphon"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
run = "giphon:main"

# Tools
# isort
[tool.isort]
profile = "black"

# black
[tool.black]
line-length = 79

# coverage
[tool.coverage.run]
omit = [
  "src/giphon/__main__.py",
]

[tool.coverage.report]
omit = [
  "tests/*",
]

# hatch
[tool.hatch.version]
path = "src/giphon/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/giphon"]

[tool.hatch.publish.index]
disable = true

# Unit tests
[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "mypy[reports]",
]

[tool.hatch.envs.test.scripts]
cov = """\
  pytest \
  --cov-report=term-missing \
  --cov-report=xml \
  --cov-config=pyproject.toml \
  --cov=src/giphon \
  --cov=tests \
  """

no-cov = """\
  pytest \
  --cov-report=term-missing \
  --cov-report=xml \
  --cov-config=pyproject.toml \
  --cov=src/giphon \
  --cov=tests \
  --no-cov \
  """

typing = """\
  mypy src \
  --strict \
  --cobertura-xml-report=mypy-report\
  """

# Style checks
[tool.hatch.envs.style]
dependencies = [
  "flake8",
  "black",
  "isort",
]
detached = true
[tool.hatch.envs.style.scripts]
check = [
  "flake8 .",
  "black --check --diff  .",
  "isort --check-only --diff .",
]
fmt = [
  "isort .",
  "black .",
  "check",
]
