[bdist_wheel]
universal = 1

[wheel]
univeral = 1

[metadata]
# ensure LICENSE is included in wheel metadata
name = Giphon
license = Apache
license_files = LICENSE
version = attr: giphon.__version__

[options]
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
